# RemoteTalk

./: .gitignore  LICENSE.txt  Readme.md  package.json
.RemoteTalk/Plugin/: CMakeLists.txt  deploy_debug.bat  deploy_release.bat  setup.bat  setup.vcxproj
Plugin/: CMakeLists.txt  RemoteTalk.sln  RemoteTalkCeVIO.vcxproj  RemoteTalkCeVIO.vcxproj.filters  RemoteTalkCeVIOCS.vcxproj  RemoteTalkCeVIOCS.vcxproj.filters  RemoteTalkCeVIOCSHook.vcxproj  RemoteTalkCeVIOCSHook.vcxproj.filters  RemoteTalkCeVIOHook.vcxproj  RemoteTalkCeVIOHook.vcxproj.filters  RemoteTalkFoundation.vcxproj  RemoteTalkFoundation.vcxproj.filters  RemoteTalkVOICEROID2.vcxproj  RemoteTalkVOICEROID2.vcxproj.filters  RemoteTalkVOICEROID2Hook.vcxproj  RemoteTalkVOICEROID2Hook.vcxproj.filters  deploy_debug.bat  deploy_master.bat  setup.bat
Plugin/RemoteTalk/: CMakeLists.txt  RemoteTalk.h  RemoteTalk.vcxproj  RemoteTalk.vcxproj.filters  RemoteTalkNet.h  pch.h  rtAudioData.cpp  rtAudioData.h  rtAudioFile.cpp  rtAudioFile.h  rtAudioFile_Ogg.cpp  rtAudioFile_Wave.cpp  rtFoundation.h  rtHook.cpp  rtHook.h  rtHookDSound.cpp  rtHookDSound.h  rtHookFileIO.cpp  rtHookFileIO.h  rtHookKernel.cpp  rtHookKernel.h  rtHookWave.cpp  rtHookWave.h  rtNorm.h  rtRawVector.h  rtSerialization.cpp  rtSerialization.h  rtServer.cpp  rtServer.h  rtTalkClient.cpp  rtTalkClient.h  rtTalkInterface.cpp  rtTalkInterface.h  rtTalkInterfaceImpl.cpp  rtTalkInterfaceImpl.h  rtTalkReceiver.cpp  rtTalkReceiver.h  rtTalkServer.cpp  rtTalkServer.h
Plugin/RemoteTalkCeVIO/: RemoteTalkCeVIO.cpp  RemoteTalkCeVIOHook.cpp  pch.h
Plugin/RemoteTalkCeVIOCS/: RemoteTalkCeVIOCS.cpp  RemoteTalkCeVIOCS.vcxproj  RemoteTalkCeVIOCSCommon.h  RemoteTalkCeVIOCSHook.cpp  RemoteTalkCeVIOCSHook.vcxproj  RemoteTalkCeVIOCSManaged.cpp  RemoteTalkCeVIOCSManaged.vcxproj  pch.h  rtcvCommon.h  rtcvHookHandler.cpp  rtcvHookHandler.h  rtcvInterface.cpp  rtcvInterface.h  rtcvInterfaceManaged.cpp  rtcvInterfaceManaged.h  rtcvTalkInterface.cpp  rtcvTalkInterface.h  rtcvTalkInterfaceManaged.cpp  rtcvTalkInterfaceManaged.h  rtcvTalkServer.cpp  rtcvTalkServer.h
Plugin/RemoteTalkClient/: CMakeLists.txt  RemoteTalkClient.cpp  RemoteTalkClient.h  RemoteTalkClient.vcxproj  pch.h
Plugin/RemoteTalkFoundation/: AudioData.cpp  AudioData.h  Foundation.h  Hook.cpp  Hook.h  HookDSound.cpp  HookDSound.h  HookKernel.cpp  HookKernel.h  HookWave.cpp  HookWave.h  Norm.h  RawVector.h  Serialization.h
Plugin/RemoteTalkSAPI/: RemoteTalkSAPI.cpp  RemoteTalkSAPI.vcxproj  rtspCommon.h  rtspHookHandler.cpp  rtspHookHandler.h  rtspTalkServer.cpp  rtspTalkServer.h
Plugin/RemoteTalkUnity/: RemoteTalkUnity.cpp  RemoteTalkUnity.h  RemoteTalkUnity.vcxproj
Plugin/RemoteTalkVOICEROID/: RemoteTalkVOICEROID2.cpp  RemoteTalkVOICEROID2.vcxproj  RemoteTalkVOICEROID2Controller.h  RemoteTalkVOICEROID2Hook.cpp  RemoteTalkVOICEROID2Hook.vcxproj  RemoteTalkVOICEROID2Managed.cpp  RemoteTalkVOICEROID2Managed.vcxproj  RemoteTalkVOICEROIDCommon.h  RemoteTalkVOICEROIDEx.cpp  RemoteTalkVOICEROIDEx.vcxproj  RemoteTalkVOICEROIDExHook.cpp  RemoteTalkVOICEROIDExHook.vcxproj  pch.h  rtvr2Common.h  rtvr2HookHandler.cpp  rtvr2HookHandler.h  rtvr2Interface.cpp  rtvr2Interface.h  rtvr2InterfaceManaged.cpp  rtvr2InterfaceManaged.h  rtvr2TalkInterface.cpp  rtvr2TalkInterface.h  rtvr2TalkInterfaceManaged.cpp  rtvr2TalkInterfaceManaged.h  rtvr2TalkServer.cpp  rtvr2TalkServer.h  rtvrCommon.h  rtvrDSound.cpp  rtvrDSound.h  rtvrHookHandler.cpp  rtvrServer.cpp  rtvrServer.h  rtvrTalkServer.cpp  rtvrTalkServer.h  rtvrexCommon.h  rtvrexHookHandler.cpp  rtvrexHookHandler.h  rtvrexInterface.cpp  rtvrexInterface.h  rtvrexTalkInterface.cpp  (+3 more)
Plugin/Test/: CMakeLists.txt  Test.h  Test.vcxproj  TestRemoteTalk.cpp  pch.h
Plugin/cmake/: AddPlugin.cmake  FindOgg.cmake  FindVorbis.cmake
(+147 files in other folders)
