CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(RemoteTalk)

if(APPLE)
    find_library(COCOA_LIBRARY Cocoa)
    mark_as_advanced(COCOA_LIBRARY)
    set(PLATFORM "Mac")
    set(MAC ON)
elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    set(PLATFORM "Linux")
    set(LINUX ON)
endif()

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
include(AddPlugin)
find_package(Poco COMPONENTS Net QUIET)
find_package(OGG QUIET)
find_package(VORBIS QUIET)

option(ENABLE_OGG "Enable Ogg/Vorbis Encoder" ON)
option(BUILD_CLIENT "Build RemoteTalkClient" ON)
option(BUILD_TESTS "Tests" OFF)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -fPIC -std=c++14 -Wno-deprecated")

list(APPEND RT_ADDITIONAL_INCLUDES ${Poco_INCLUDE_DIRS})
list(APPEND RT_ADDITIONAL_LIBS ${Poco_LIBRARIES})
if(ENABLE_OGG)
    add_definitions(-DrtEnableOgg)
    list(APPEND RT_ADDITIONAL_INCLUDES ${OGG_INCLUDE_DIR} ${VORBIS_INCLUDE_DIR})
    list(APPEND RT_ADDITIONAL_LIBS ${OGG_LIBRARY} ${VORBIS_LIBRARIES})
endif()

add_subdirectory(RemoteTalk)
if(BUILD_CLIENT)
    add_subdirectory(RemoteTalkClient)
endif()
if(BUILD_TESTS)
    add_subdirectory(Test)
endif()

